# vec_search_demo

./: .gitignore  app.py  config.py  db.py  pyproject.toml  utils.py
embedding/: base.py  minilm.py
templates/: base.html  index.html
text_extraction/: basic_extraction.py  extraction_utils.py  image_extraction.py  office_doc_extraction.py  pdf_extraction.py  web_extraction.py
